2003-11-15  Manu B  <manubee@users.sourceforge.net>

	* include/commctrl.h (TabCtrl_GetImageList): Add macro.

2003-11-13 Martin Fuchs  <martin-fuchs@gmx.net>

	* include/shlobj.h (ILAppendID, ILClone, ILCloneFirst, ILCombine,
	ILFindChild, ILFindLastID, ILFree, ILGetNext, ILGetSize, ILIsEqual,
	ILIsParent, ILLoadFromStream, ILRemoveLastID, ILSaveToStream):
	Add prototypes.
	* lib/shell32.def: Add stubs.

	* include/commctrl.h (ListView_FindItem): Add type cast to avoid
	compiler warnings.

2003-11-13  Hans Leidekker <hans@it.vu.nl>

	* include/winbase.h (WIN32_STREAM_ID): Correct typedef.

2003-10-13  Andre Auzi  <aauzi@users.sourceforge.net>

	* include/windows.h (CopyCursor): Define as macro.

2003-10-13  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/winnt.h (CONTAINING_RECORD): Add macro.

2003-10-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h: (FILE_SUPERSEDED, FILE_OPENED, FILE_CREATED,
	FILE_OVERWRITTEN, FILE_EXISTS, FILE_DOES_NOT_EXIST): Remove
	defines.

2003-10-13  Filip Navara  <xnavara@volny.cz>

	* include/commctrl.h: (DSA_*):Add prototypes, typedefs and
	defines for Dynamic Storage Arrays.
	(DPA_*): Likewise, for Dynamic Pointer Arrays.
	(FlatSB_*, InitializeFlatSB, InitializeFlatSB): Add prototypes
	and defines for Flat ScrollBars.
	(SetWindowSubclass, GetWindowSubclass, RemoveWindowSubclass,
	DefSubclassProc): Add prototypes for subclassing.
	(DrawShadowText) Add prototype.
	(COMCTL32_VERSION): Define.

2003-10-13  Martin Fuchs  <Martin-Fuchs@gmx.net>

	* include/shlobj.h (CFSTR_FILENAME, CFSTR_FILEDESCRIPTOR,
	CFSTR_FILENAMEMAP, CFSTR_SHELLURL): Correct UNICODE definitions.

2003-10-13  Pierre Humblet  <pierre.humblet@ieee.org>

	* include/winnt.h (SM_REMOTESESSION): Add define.
	* include/winuser.h (SE_CREATE_GLOBAL_NAME): Ditto.

2003-10-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wincrypt (KP_IV, KP_SALT, KP_PADDING, KP_MODE,
	KP_MODE_BITS, KP_PERMISSIONS, KP_ALGID, KP_BLOCKLEN): Remove