@@ -712,9 +712,6 @@ typedef DWORD FLONG;
 #define PF_RDTSC_INSTRUCTION_AVAILABLE 8
 #define PF_PAE_ENABLED 9
 #define PF_XMMI64_INSTRUCTIONS_AVAILABLE 10
-#define PAGE_READONLY 2
-#define PAGE_READWRITE 4
-#define PAGE_WRITECOPY 8
 /* also in ddk/ntifs.h */
 #define FILE_ACTION_ADDED                   0x00000001
 #define FILE_ACTION_REMOVED                 0x00000002
@@ -767,12 +764,16 @@ typedef DWORD FLONG;
 #define DACL_SECURITY_INFORMATION 4
 #define SACL_SECURITY_INFORMATION 8
 #define MAXIMUM_PROCESSORS 32
-#define PAGE_EXECUTE 16
-#define PAGE_EXECUTE_READ 32
-#define PAGE_EXECUTE_READWRITE 64
-#define PAGE_GUARD 256
-#define PAGE_NOACCESS 1
-#define PAGE_NOCACHE 512
+#define PAGE_NOACCESS	0x0001
+#define PAGE_READONLY	0x0002
+#define PAGE_READWRITE	0x0004
+#define PAGE_WRITECOPY	0x0008
+#define PAGE_EXECUTE	0x0010
+#define PAGE_EXECUTE_READ	0x0020
+#define PAGE_EXECUTE_READWRITE	0x0040
+#define PAGE_EXECUTE_WRITECOPY	0x0080
+#define PAGE_GUARD		0x0100
+#define PAGE_NOCACHE		0x0200
 #define MEM_COMMIT           0x1000
 #define MEM_RESERVE          0x2000
 #define MEM_DECOMMIT         0x4000
@@ -796,7 +797,6 @@ typedef DWORD FLONG;
 #define SEC_COMMIT	0x08000000
 #define SEC_NOCACHE	0x10000000
 /* end ntifs.h */
-#define PAGE_EXECUTE_WRITECOPY 128
 #define SECTION_EXTEND_SIZE 16
 #define SECTION_MAP_READ 4
 #define SECTION_MAP_WRITE 2
