@@ -1,3 +1,8 @@
+2003-11-23  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/winnt.h (PAGE_*): Group defines together. Change
+	constants to hex notation.
+
 2003-11-15  Manu B  <manubee@users.sourceforge.net>
 
 	* include/commctrl.h (TabCtrl_GetImageList): Add macro.
